--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <h2>News</h2>
 <ul>
+<li><p>16-Aug-2025, I will serve as Area Chair for <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;26</b></a> and <a href="https://aistats.org/aistats2026/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;26</b></a>.
+</p>
+</li>
+<li><p>13-July-2025, I will serve as Senior Program Committee for <a href="https://aaai.org/conference/aaai/aaai-26/" target=&ldquo;blank&rdquo;><i>AAAI&rsquo;26</i></a>.
+</p>
+</li>
 <li><p>01-May-2025, Our 3 papers have been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;25</b></a>.
 </p>
 <ul>
@@ -109,15 +115,6 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 </li>
 <li><p>07-Aug-2024, I will serve as Area Chair for <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;25</b></a>, and as Senior Program Committee for <a href="https://aaai.org/conference/aaai/aaai-25/" target=&ldquo;blank&rdquo;><i>AAAI&rsquo;25</i></a>.
-
-
-
-
-
-
-
-
-
 </p>
 </li>
 </ul>
@@ -140,7 +137,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-14 14:14:23 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-17 15:55:02 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
