--- a/publication.html
+++ b/publication.html
@@ -240,6 +240,13 @@ Hoang V. Tran, Thanh Chu, Thanh Tran, Khang Tran, <b>Tam Le</b><font color="gree
 </li>
 </ul>
 <ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree Structure for the Categorical Wasserstein Weisfeiler-Lehman Graph Kernel</font></a>  <br /> 
+Under review. <br /> 
+Keishi Sando, <b>Tam Le</b>, Hideitsu Hino.
+</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/2502.00739" target=&ldquo;blank&rdquo;><font color="blue">Orlicz-Sobolev Transport for Unbalanced Measures on a Graph</font></a>  <br /> 
 ArXiv, 2025. <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu.
@@ -433,7 +440,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-14 14:14:23 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-17 15:55:02 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
