--- a/professional.html
+++ b/professional.html
@@ -37,7 +37,7 @@
 <li><p>International Conference on Learning Representations (<b>ICLR</b>)
 </p>
 <ul>
-<li><p>Area chair (<b>AC</b>): <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>-2025
+<li><p>Area chair (<b>AC</b>): <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>-2026
 </p>
 </li>
 <li><p>Program committee: 2020-2023
@@ -47,7 +47,7 @@
 <li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>)
 </p>
 <ul>
-<li><p>Area chair (<b>AC</b>): <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>-2025
+<li><p>Area chair (<b>AC</b>): <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>-2026
 </p>
 </li>
 <li><p>Program committee: 2020-2023
@@ -78,7 +78,7 @@
 
 </p>
 <ul>
-<li><p>SPC, AAAI Conference on Artificial Intelligence (AAAI): 2025
+<li><p>SPC, AAAI Conference on Artificial Intelligence (AAAI): 2025-2026
 </p>
 </li>
 <li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022-2024
@@ -205,7 +205,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-14 14:14:23 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-17 15:55:02 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
