--- a/index.html
+++ b/index.html
@@ -35,26 +35,26 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 </p>
 </td></tr></table>
 <h2>Research: Machine Learning, Optimal Transport <br /></h2>
-<p>My research aims to improve scalability, efficiency, and robustness for learning with large-scale, complex data and models from optimal transport (OT) theory perspectives, with a focus on two objectives:
+<p>My research aims to make AI more advanced, with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from <i>optimal transport (OT) theory</i> perspectives. More specifically, my research objectives are as follows:
 </p>
 <ol>
 <li><p>Deepening OT theory: 
 </p>
 <ol>
-<li><p>Breaking the curse of dimensionality for OT with projected 1D-structure.
+<li><p>Breaking the curse of dimensionality for OT with projected 1D-structure, e.g., graph structure, tree system, tree structure.
 </p>
 </li>
-<li><p>Going beyond Lp-structure for variational Wasserstein problems.
+<li><p>Going beyond Lp-structure for variational Wasserstein problems, e.g., functional geometric structure.
 </p>
 </li></ol>
 </li>
 <li><p>Leveraging OT theoretical insights for data science: 
 </p>
 <ol>
-<li><p>Designing innovative, and efficient methodologies.
+<li><p>Designing innovative, and efficient methodologies, e.g., for data valuation, LLM pretraining, diffusion model, generative model.
 </p>
 </li>
-<li><p>Centering on applications with large-scale, complex structured data.
+<li><p>Centering on applications with large-scale, complex structured data, e.g., non-Euclidean, dynamic, nonlinearity, corruption.
 </p>
 </li>
 </ol>
@@ -137,7 +137,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-17 15:55:02 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-20 17:24:17 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
