--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;blank&rdquo;>Access to ISM</a> <br />
 </p>
 </div></div>
-<p>My CV is <a href="https://www.dropbox.com/scl/fi/wrsoin2s3e7h42cszd913/TamLe_CV_2025March.pdf?rlkey=hpk65w23vrrzkfcga5fxx8hvm&amp;dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated March, 2025.
+<p>My CV is <a href="https://www.dropbox.com/scl/fi/0d38797rptvc3vgqnhcud/TamLe2025Aug_CV.pdf?rlkey=atjivszmnl6pksp4z4t2t0nox&amp;dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated August, 2025.
 </p>
 <h2>News</h2>
 <ul>
@@ -130,6 +130,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 </li>
 <li><p>Program committee: NeurIPS
+
 </p>
 </li>
 </ul>
@@ -137,7 +138,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-20 17:24:17 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-24 19:35:20 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
