--- a/professional.html
+++ b/professional.html
@@ -205,7 +205,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-20 17:24:17 +07, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-24 19:35:20 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
