--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
 <td align="left"><p>Assistant Professor, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;><b>The Institute of Statistical Mathematics (ISM)</b></a> <br />
 <a href="https://www.ism.ac.jp/souran-en/index_e.html" target=&ldquo;blank&rdquo;>Department of Advanced Data Science</a> <br />
 <a href="https://www.ism.ac.jp/noe/sml-center/en/index.html" target=&ldquo;blank&rdquo;>Research Center for Statistical Machine Learning</a> <br />
-<br />
-Concurrent affiliation: <br />
-
-Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a>. <br />
-Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. <br />
+</p>
+<p>Email: tam[<i>at</i>]ism.ac.jp <br />
+<br /> 
+<a href="https://www.dropbox.com/scl/fi/0d38797rptvc3vgqnhcud/TamLe2025Aug_CV.pdf?rlkey=atjivszmnl6pksp4z4t2t0nox&amp;dl=0" target=&ldquo;blank&rdquo;>CV</a> - <a href="https://scholar.google.com/citations?user=ZyrRB_8AAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google scholar</a> - <a href="https://github.com/lttam" target=&ldquo;blank&rdquo;>GitHub</a> - <a href="https://researchmap.jp/tamle" target=&ldquo;blank&rdquo;>Research map</a> <br />
 </p>
 </td></tr></table>
-<h2>Research: Machine Learning, Optimal Transport <br /></h2>
+<h2>Research Interests: Machine Learning, Optimal Transport, Kernels <br /></h2>
 <p>My research aims to make AI more advanced, with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from <i>optimal transport (OT) theory</i> perspectives. More specifically, my research objectives are as follows:
 </p>
 <ol>
@@ -65,13 +64,10 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 <div class="infoblock">
 <div class="blockcontent">
 <p>10-3 Midori-cho, Tachikawa, Tokyo 190-8562, Japan <br />
-Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;blank&rdquo;>Access to ISM</a> <br />
+Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </p>
 </div></div>
-<p>My CV is <a href="https://www.dropbox.com/scl/fi/0d38797rptvc3vgqnhcud/TamLe2025Aug_CV.pdf?rlkey=atjivszmnl6pksp4z4t2t0nox&amp;dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated August, 2025. <br />
-[<a href="https://scholar.google.com/citations?user=ZyrRB_8AAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google scholar</a>, <a href="https://github.com/lttam" target=&ldquo;blank&rdquo;>GitHub</a>, <a href="https://researchmap.jp/tamle" target=&ldquo;blank&rdquo;>Research map</a>]
-</p>
 <h2>News</h2>
 <ul>
 <li><p>16-Aug-2025, I will serve as Area Chair for <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;26</b></a> and <a href="https://aistats.org/aistats2026/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;26</b></a>.
@@ -139,7 +135,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-24 21:06:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-26 15:55:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
