--- a/professional.html
+++ b/professional.html
@@ -20,7 +20,7 @@
 <div id="toptitle">
 <h1>Tam Le - Professional Activities</h1>
 </div>
-<h2>Professional Services</h2>
+<h2>Professional Service</h2>
 <p><b> Selected ML Conferences / Journals</b>
 </p>
 <ul>
@@ -205,7 +205,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-24 21:06:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-26 15:55:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
