--- a/publication.html
+++ b/publication.html
@@ -22,7 +22,7 @@
 </div>
 <p>(<font color="red">*</font>: equal contribution; <font color="green">&oast;</font>: co-last author)
 </p>
-<h2>Selected Journals / Conference papers</h2>
+<h2>Selected Journals / Conference Papers</h2>
 <ul>
 <li><p><a href="https://openreview.net/pdf?id=StaRAs9n49" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance: A Geometric Perspective</font></a>. [<a href="https://www.dropbox.com/scl/fi/bs7qa04znefzwopb4atqd/ICML2025_Poster_TSW-SL_TreeSystem.pdf?rlkey=b8hs29frkutd4kxphe36cboct&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br /> 
 
@@ -223,7 +223,7 @@ Machine Learning Journal (<b><font style="color:rgb(23, 165, 137)">MLJ</font></b
 </li>
 </ul>
 <h2>Others</h2>
-<p><b>Other Journals / Conference papers / Preprints</b>
+<p><b>Other Journals / Conference Papers / Preprints</b>
 </p>
 <ul>
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Entropy Partial Transport</font></a>  <br /> 
@@ -440,7 +440,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-24 21:06:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-26 15:55:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
