--- a/publication.html
+++ b/publication.html
@@ -28,7 +28,7 @@
 
 
 <b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2025. <br />
-Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran, Khoi Nguyen, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+Viet-Hoang Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran, Khoi N.M. Nguyen, Thanh T. Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
 </ul>
@@ -37,7 +37,7 @@ Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, T
 
 
 <b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2025. <br />
-Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, Thanh Chu, Trang Pham, Laurent El Ghaoui<font color="green">&oast;</font>, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+Thanh Tran<font color="red">*</font>, Viet-Hoang Tran<font color="red">*</font>, Thanh T. Chu, Trang Pham, Laurent El Ghaoui<font color="green">&oast;</font>, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
 </ul>
@@ -56,7 +56,7 @@ Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, T
 
 
 <b><font style="color:rgb(34, 153, 84)">ICLR</font></b>, 2025. <br />
-Hoang V. Tran<font color="red">*</font>, Khoi Nguyen<font color="red">*</font>, Trang Pham, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+Viet-Hoang Tran<font color="red">*</font>, Khoi N.M. Nguyen<font color="red">*</font>, Trang Pham, Thanh T. Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
 </ul>
@@ -66,7 +66,7 @@ Hoang V. Tran<font color="red">*</font>, Khoi Nguyen<font color="red">*</font>, 
 
 
 <b><font style="color:rgb(34, 153, 84)">ICLR</font></b>, 2025. <br />
-Hoang V. Tran<font color="red">*</font>, Thanh Chu<font color="red">*</font>, Khoi Nguyen, Trang Pham,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+Viet-Hoang Tran<font color="red">*</font>, Thanh T. Chu<font color="red">*</font>, Khoi N.M. Nguyen, Trang Pham,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
 </ul>
@@ -228,14 +228,14 @@ Machine Learning Journal (<b><font style="color:rgb(23, 165, 137)">MLJ</font></b
 <ul>
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Entropy Partial Transport</font></a>  <br /> 
 Under review. <br /> 
-Hoang V. Tran, Thanh Tran, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+Hoang V. Tran, Thanh Tran, Thanh T. Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
 </ul>
 <ul>
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Revisiting Tree-Sliced Wasserstein Distance Through the Lens of the Fermat–Weber Problem</font></a>  <br /> 
 Under review. <br /> 
-Hoang V. Tran, Thanh Chu, Thanh Tran, Khang Tran, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+Viet-Hoang Tran, Thanh T. Chu, Thanh Tran, Khang Tran, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
 </ul>
@@ -256,7 +256,7 @@ ArXiv, 2025. <br />
 <ul>
 <li><p><a href="https://www.dropbox.com/scl/fi/dsforw4iizhwr8lw0v2vl/CVIU2025-Few-Shot-Object-Detection-via-Synthetic-Features-with-Optimal-Transport.pdf?rlkey=uo2ljzicldzg71w7nuv1b5l3r&amp;dl=0" target=&ldquo;blank&rdquo;><font color="blue">Few-Shot Object Detection via Synthetic Features with Optimal Transport</font></a> <br />
 Computer Vision and Image Understanding (<b>CVIU</b>) journal, 2025. <br />
-Anh Khoa Nguyen Vu, Thanh-Toan Do, Vinh-Tiep Nguyen, <b>Tam Le</b>, Minh-Triet Tran, Tam V. Nguyen
+Anh-Khoa Nguyen-Vu, Thanh-Toan Do, Vinh-Tiep Nguyen, <b>Tam Le</b>, Minh-Triet Tran, Tam V. Nguyen
 </p>
 </li>
 </ul>
@@ -440,7 +440,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-26 15:55:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-31 20:54:20 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
