--- a/publication.html
+++ b/publication.html
@@ -228,7 +228,7 @@ Machine Learning Journal (<b><font style="color:rgb(23, 165, 137)">MLJ</font></b
 <ul>
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Entropy Partial Transport</font></a>  <br /> 
 Under review. <br /> 
-Hoang V. Tran, Thanh Tran, Thanh T. Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+Viet-Hoang Tran, Thanh Tran, Thanh T. Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
 </ul>
@@ -440,7 +440,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-31 20:54:20 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-31 20:55:55 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
