--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </p>
 <p>Email: tam[<i>at</i>]ism.ac.jp <br />
 <br /> 
-<a href="https://www.dropbox.com/scl/fi/0d38797rptvc3vgqnhcud/TamLe2025Aug_CV.pdf?rlkey=atjivszmnl6pksp4z4t2t0nox&amp;dl=0" target=&ldquo;blank&rdquo;>CV</a> - <a href="https://scholar.google.com/citations?user=ZyrRB_8AAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google scholar</a> - <a href="https://github.com/lttam" target=&ldquo;blank&rdquo;>GitHub</a> - <a href="https://researchmap.jp/tamle" target=&ldquo;blank&rdquo;>Research map</a> <br />
+<a href="https://www.dropbox.com/scl/fi/0d38797rptvc3vgqnhcud/TamLe2025Aug_CV.pdf?rlkey=atjivszmnl6pksp4z4t2t0nox&amp;dl=0" target=&ldquo;blank&rdquo;>CV</a> - <a href="https://scholar.google.com/citations?user=ZyrRB_8AAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google scholar</a> - <a href="https://www.linkedin.com/in/lttam/" target=&ldquo;blank&rdquo;>LinkedIn</a> - <a href="https://github.com/lttam" target=&ldquo;blank&rdquo;>GitHub</a> - <a href="https://researchmap.jp/tamle" target=&ldquo;blank&rdquo;>Research map</a> <br />
 </p>
 </td></tr></table>
 <h2>Research Interests: Machine Learning, Optimal Transport, Kernels <br /></h2>
@@ -135,7 +135,7 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-31 20:55:55 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-09-01 09:40:35 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
