--- a/professional.html
+++ b/professional.html
@@ -27,37 +27,37 @@
 <li><p>International Conference on Machine Learning (<b>ICML</b>)
 </p>
 <ul>
-<li><p>Area chair (<b>AC</b>): <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>-2025
+<li><p>Area chair (<b>AC</b>): <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>&ndash;2025
 </p>
 </li>
-<li><p>Program committee: 2015, 2019-2023
+<li><p>Program committee: 2015, 2019&ndash;2023
 </p>
 </li></ul>
 </li>
 <li><p>International Conference on Learning Representations (<b>ICLR</b>)
 </p>
 <ul>
-<li><p>Area chair (<b>AC</b>): <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>-2026
+<li><p>Area chair (<b>AC</b>): <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>&ndash;2026
 </p>
 </li>
-<li><p>Program committee: 2020-2023
+<li><p>Program committee: 2020&ndash;2023
 </p>
 </li></ul>
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>)
 </p>
 <ul>
-<li><p>Area chair (<b>AC</b>): <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>-2026
+<li><p>Area chair (<b>AC</b>): <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>&ndash;2026
 </p>
 </li>
-<li><p>Program committee: 2020-2023
+<li><p>Program committee: 2020&ndash;2023
 </p>
 </li></ul>
 </li>
-<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>)
+<li><p>Neural Information Processing Systems (<b>NeurIPS</b>)
 </p>
 <ul>
-<li><p>Program committee: 2015, 2019-2025
+<li><p>Program committee: 2015, 2019&ndash;2025
 </p>
 </li></ul>
 </li>
@@ -78,16 +78,16 @@
 
 </p>
 <ul>
-<li><p>SPC, AAAI Conference on Artificial Intelligence (AAAI): 2025-2026
+<li><p>SPC, AAAI Conference on Artificial Intelligence (AAAI): 2025&ndash;2026
 </p>
 </li>
-<li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022-2024
+<li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022&ndash;2024
 </p>
 </li>
-<li><p>AC, Asian Conference on Machine Learning (ACML): 2022-2024
+<li><p>AC, Asian Conference on Machine Learning (ACML): 2022&ndash;2024
 </p>
 </li>
-<li><p>SPC, International Joint Conference on Artificial Intelligence (IJCAI): 2021-2022
+<li><p>SPC, International Joint Conference on Artificial Intelligence (IJCAI): 2021&ndash;2022
 </p>
 </li>
 </ul>
@@ -99,28 +99,28 @@
 
 </p>
 <ul>
-<li><p>Machine Learning Journal (MLJ): 2017-2019
+<li><p>Machine Learning Journal (MLJ): 2017&ndash;2019
 </p>
 </li>
-<li><p>Transactions on Pattern Analysis and Machine Intelligence (PAMI): 2021-2022
+<li><p>Transactions on Pattern Analysis and Machine Intelligence (PAMI): 2021&ndash;2022
 </p>
 </li>
 <li><p>Discrete and Computational Geometry Journal (DCG): 2021 
 </p>
 </li>
-<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2020
+<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018&ndash;2020
 </p>
 </li>
-<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2024
+<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020&ndash;2024
 </p>
 </li>
 <li><p>Conference on Computer Vision and Pattern Recognition (CVPR): 2021
 </p>
 </li>
-<li><p>Data Mining and Knowledge Discovery Journal (DMKD): 2016-2017
+<li><p>Data Mining and Knowledge Discovery Journal (DMKD): 2016&ndash;2017
 </p>
 </li>
-<li><p>Asian Conference on Machine Learning (ACML): 2013-2019
+<li><p>Asian Conference on Machine Learning (ACML): 2013&ndash;2019
 </p>
 </li>
 </ul>
@@ -141,23 +141,23 @@
 <p><b>Grants</b>
 </p>
 <ul>
-<li><p>04/2023 - 03/2026, <a href="https://www.jsps.go.jp/english/e-grants/" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 23K11243</a>, Grants-in-Aid for Scientific Research (C) as PI (4.8M JPY). 
+<li><p>04/2023&ndash;03/2026, <a href="https://www.jsps.go.jp/english/e-grants/" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 23K11243</a>, Grants-in-Aid for Scientific Research (C) as PI (4.8M JPY). 
 </p>
 </li>
-<li><p>04/2020 - 03/2023, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 20K19873</a>, Grants-in-Aid for Young Scientists as PI (4.2M JPY). 
+<li><p>04/2020&ndash;03/2023, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 20K19873</a>, Grants-in-Aid for Young Scientists as PI (4.2M JPY). 
 </p>
 </li>
-<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K12745</a>, Grants-in-Aid for Young Scientists (B) as PI (4.1M JPY). 
+<li><p>04/2017&ndash;03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K12745</a>, Grants-in-Aid for Young Scientists (B) as PI (4.1M JPY). 
 </p>
 </li>
 </ul>
 <p><b>Others</b>
 </p>
 <ul>
-<li><p>06/2022 - 03/2027, a collaborator in Data Science group led by <a href="https://www.ism.ac.jp/~fukumizu/" target=&ldquo;blank&rdquo;>Kenji Fukumizu</a> (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). 
+<li><p>06/2022&ndash;03/2027, a collaborator in Data Science group led by <a href="https://www.ism.ac.jp/~fukumizu/" target=&ldquo;blank&rdquo;>Kenji Fukumizu</a> (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). 
 </p>
 </li>
-<li><p>04/2023 - 03/2026, a collaborator in a research group led by <a href="https://sites.google.com/view/hinohide/" target=&ldquo;blank&rdquo;>Hideitsu Hino</a> (ISM), Mitsui Knowledge Industry Co., Ltd. grant. 
+<li><p>04/2023&ndash;03/2026, a collaborator in a research group led by <a href="https://sites.google.com/view/hinohide/" target=&ldquo;blank&rdquo;>Hideitsu Hino</a> (ISM), Mitsui Knowledge Industry Co., Ltd. grant. 
 
 
 </p>
@@ -205,7 +205,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-01 09:59:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-09-11 11:33:40 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
