--- a/professional.html
+++ b/professional.html
@@ -27,37 +27,37 @@
 <li><p>International Conference on Machine Learning (<b>ICML</b>)
 </p>
 <ul>
-<li><p>Area chair (<b>AC</b>): <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>&ndash;2025
+<li><p>Area chair (<b>AC</b>): <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>, <a href="https://icml.cc/Conferences/2025/ProgramCommittee" target=&ldquo;blank&rdquo;>2025</a>
 </p>
 </li>
-<li><p>Program committee: 2015, 2019&ndash;2023
+<li><p>Program committee: 2015, 2019, 2020, 2021, 2022, 2023
 </p>
 </li></ul>
 </li>
 <li><p>International Conference on Learning Representations (<b>ICLR</b>)
 </p>
 <ul>
-<li><p>Area chair (<b>AC</b>): <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>&ndash;2026
+<li><p>Area chair (<b>AC</b>): <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>, <a href="https://iclr.cc/Conferences/2025/ProgramCommittee" target=&ldquo;blank&rdquo;>2025</a>, 2026
 </p>
 </li>
-<li><p>Program committee: 2020&ndash;2023
+<li><p>Program committee: 2020, 2021, 2022, 2023
 </p>
 </li></ul>
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>)
 </p>
 <ul>
-<li><p>Area chair (<b>AC</b>): <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>&ndash;2026
+<li><p>Area chair (<b>AC</b>): <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>, <a href="https://virtual.aistats.org/Conferences/2025/AreaChairs" target=&ldquo;blank&rdquo;>2025</a>, 2026
 </p>
 </li>
-<li><p>Program committee: 2020&ndash;2023
+<li><p>Program committee: 2020, 2021, 2022, 2023
 </p>
 </li></ul>
 </li>
 <li><p>Neural Information Processing Systems (<b>NeurIPS</b>)
 </p>
 <ul>
-<li><p>Program committee: 2015, 2019&ndash;2025
+<li><p>Program committee: 2015, 2019, 2020, 2021, 2022, 2023, 2024, 2025
 </p>
 </li></ul>
 </li>
@@ -78,16 +78,16 @@
 
 </p>
 <ul>
-<li><p>SPC, AAAI Conference on Artificial Intelligence (AAAI): 2025&ndash;2026
+<li><p>SPC, AAAI Conference on Artificial Intelligence (AAAI): 2025, 2026
 </p>
 </li>
-<li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022&ndash;2024
+<li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022, 2023, 2024
 </p>
 </li>
-<li><p>AC, Asian Conference on Machine Learning (ACML): 2022&ndash;2024
+<li><p>AC, Asian Conference on Machine Learning (ACML): 2022, 2023, 2024
 </p>
 </li>
-<li><p>SPC, International Joint Conference on Artificial Intelligence (IJCAI): 2021&ndash;2022
+<li><p>SPC, International Joint Conference on Artificial Intelligence (IJCAI): 2021, 2022
 </p>
 </li>
 </ul>
@@ -205,7 +205,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-11 11:39:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-09-11 15:36:19 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
