--- a/publication.html
+++ b/publication.html
@@ -360,6 +360,9 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <h2>Invited Talks</h2>
 <ul>
+<li><p>2025, <a href="https://sites.google.com/view/optds2025" target=&ldquo;blank&rdquo;>Workshop on Optimization and Machine Learning for Data Science and Future Computing</a>, Tokyo, Japan.
+</p>
+</li>
 <li><p>2025, Statistical Mathematics Seminar Series, Virtual.
 </p>
 </li>
@@ -443,16 +446,9 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </p>
 </li>
 </ul>
-<p><b>Upcoming Invited Talks</b>
-</p>
-<ul>
-<li><p>09/2025, Workshop on Optimization and Machine Learning for Data Science and Future Computing, Japan.
-</p>
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-11 15:36:19 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-09-16 17:03:47 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
