--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <a href="TamLeISM22.jpg"><img src="TamLeISM22.jpg" alt="Tam Le" width="150px" height="178px" /></a>&nbsp;</td>
-<td align="left"><p>Assistant Professor, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;><b>Institute of Statistical Mathematics (ISM)</b></a> <br />
+<td align="left"><p>Assistant Professor, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>Institute of Statistical Mathematics (ISM)</a> <br />
 <a href="https://www.ism.ac.jp/souran-en/index_e.html" target=&ldquo;blank&rdquo;>Department of Advanced Data Science</a> <br />
 
 </p>
@@ -116,7 +116,7 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </li>
 </ul>
 <h2>Vita</h2>
-<p>I received my Ph.D. in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and advised by <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. I worked as a post-doctoral researcher at <a href="https://www-als.ics.nitech.ac.jp/en_index.html" target=&ldquo;blank&rdquo;>NITECH</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>NIMS</a>, between 02/2016 and 08/2017. Then, I worked at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN AIP</a> between 09/2017 and 07/2021 as a post-doctoral researcher; and between 08/2021 and 08/2022 as a research scientist. I have joined <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>Institute of Statistical Mathematics (ISM)</a>, Tokyo, in 09/2022, as an assistant professor. 
+<p>I received my Ph.D. in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;>Marco Cuturi</a> and advised by <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Akihiro Yamamoto</a>. I worked as a post-doctoral researcher at <a href="https://www-als.ics.nitech.ac.jp/en_index.html" target=&ldquo;blank&rdquo;>NITECH</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>NIMS</a>, between 02/2016 and 08/2017. Then, I worked at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN AIP</a> between 09/2017 and 07/2021 as a post-doctoral researcher; and between 08/2021 and 08/2022 as a research scientist. I have joined <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>Institute of Statistical Mathematics (ISM)</a>, Tokyo, in 09/2022, as an assistant professor. 
 </p>
 <h2>Selected Service</h2>
 <ul>
@@ -135,7 +135,7 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-11 15:36:19 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-09-16 17:03:47 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
