--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </div></div>
 <h2>News</h2>
 <ul>
+<li><p>19-Sep-2025, Our 2 papers have been accepted to <a href="https://neurips.cc/" target=&ldquo;blank&rdquo;><b>NeurIPS&rsquo;25</b></a>.
+</p>
+<ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</a> [<b><font style="color:rgb(138,43,226)">spotlight</font></b>], joint work with Truyen Nguyen, Hideitsu Hino, and Kenji Fukumizu.
+</p>
+</li>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Tree-Sliced Entropy Partial Transport</a>, joint work with Hoang Tran, Thanh Tran, Thanh Chu, and Tan Nguyen.
+</p>
+</li></ul>
+</li>
 <li><p>16-Aug-2025, I will serve as Area Chair for <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;26</b></a> and <a href="https://aistats.org/aistats2026/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;26</b></a>.
 </p>
 </li>
@@ -132,7 +142,7 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-16 22:22:40 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-09-19 09:44:45 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
