--- a/publication.html
+++ b/publication.html
@@ -25,6 +25,21 @@
 </p>
 <h2>Selected Journals / Conference Papers</h2>
 <ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</font></a>  <br /> 
+<b><font style="color:rgb(34, 153, 84)">NeurIPS</font></b>, 2025. [Spotlight rate: 688/21575=<b>3.19%</b>] <br />
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu. <br />
+(<font style="color:rgb(23, 165, 137)">This paper was selected for spotlight presentation.</font> Spotlight : acceptance : submissions = 688 : 5290 : 21575)
+</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Entropy Partial Transport</font></a>. <br /> 
+<b><font style="color:rgb(34, 153, 84)">NeurIPS</font></b>, 2025. <br />
+Viet-Hoang Tran, Thanh Tran, Thanh T. Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://openreview.net/pdf?id=StaRAs9n49" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance: A Geometric Perspective</font></a>. [<a href="https://www.dropbox.com/scl/fi/bs7qa04znefzwopb4atqd/ICML2025_Poster_TSW-SL_TreeSystem.pdf?rlkey=b8hs29frkutd4kxphe36cboct&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br /> 
 
 
@@ -157,7 +172,7 @@ Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Ma
 
 
 
-<b><font style="color:rgb(34, 153, 84)">AISTATS</font></b>, 2021. [Oral rate: 48/1527=<b>3.1%</b>] <br />
+<b><font style="color:rgb(34, 153, 84)">AISTATS</font></b>, 2021. [Oral rate: 48/1527=<b>3.14%</b>] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font> <br />
 (<font style="color:rgb(23, 165, 137)">This paper was selected for oral presentation.</font> Oral : acceptance : submissions = 48 : 455 : 1527)
 </p>
@@ -228,13 +243,6 @@ Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi.
 <p><b>Other Journals / Conference Papers / Preprints</b>
 </p>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Entropy Partial Transport</font></a>  <br /> 
-Under review. <br /> 
-Viet-Hoang Tran, Thanh Tran, Thanh T. Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
-</p>
-</li>
-</ul>
-<ul>
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Revisiting Tree-Sliced Wasserstein Distance Through the Lens of the Fermat–Weber Problem</font></a>  <br /> 
 Under review. <br /> 
 Viet-Hoang Tran, Thanh T. Chu, Thanh Tran, Khang Tran, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
@@ -245,13 +253,6 @@ Viet-Hoang Tran, Thanh T. Chu, Thanh Tran, Khang Tran, <b>Tam Le</b><font color=
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree Structure for the Categorical Wasserstein Weisfeiler-Lehman Graph Kernel</font></a>  <br /> 
 Under review. <br /> 
 Keishi Sando, <b>Tam Le</b>, Hideitsu Hino.
-</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/pdf/2502.00739" target=&ldquo;blank&rdquo;><font color="blue">Orlicz-Sobolev Transport for Unbalanced Measures on a Graph</font></a>  <br /> 
-ArXiv, 2025. <br />
-<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu.
 </p>
 </li>
 </ul>
@@ -449,7 +450,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-16 22:22:40 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-09-19 09:44:45 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
