--- a/publication.html
+++ b/publication.html
@@ -72,7 +72,8 @@ Thanh Tran<font color="red">*</font>, Viet-Hoang Tran<font color="red">*</font>,
 
 
 <b><font style="color:rgb(34, 153, 84)">ICLR</font></b>, 2025. <br />
-Viet-Hoang Tran<font color="red">*</font>, Khoi N.M. Nguyen<font color="red">*</font>, Trang Pham, Thanh T. Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+Viet-Hoang Tran<font color="red">*</font>, Khoi N.M. Nguyen<font color="red">*</font>, Trang Pham, Thanh T. Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.<br />
+(<i>Preliminary workshop version in ICLR workshop: DeLTa, 2025</i>)
 </p>
 </li>
 </ul>
@@ -82,7 +83,8 @@ Viet-Hoang Tran<font color="red">*</font>, Khoi N.M. Nguyen<font color="red">*</
 
 
 <b><font style="color:rgb(34, 153, 84)">ICLR</font></b>, 2025. <br />
-Viet-Hoang Tran<font color="red">*</font>, Thanh T. Chu<font color="red">*</font>, Khoi N.M. Nguyen, Trang Pham,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+Viet-Hoang Tran<font color="red">*</font>, Thanh T. Chu<font color="red">*</font>, Khoi N.M. Nguyen, Trang Pham,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>. <br />
+(<i>Preliminary workshop version in ICLR workshop: DeLTa, 2025</i>)
 </p>
 </li>
 </ul>
@@ -450,7 +452,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-30 10:44:04 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-02 17:49:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
