--- a/publication.html
+++ b/publication.html
@@ -252,6 +252,20 @@ Viet-Hoang Tran, Thanh T. Chu, Thanh Tran, Duy-Tung Pham, Khang Tran, <b>Tam Le<
 </li>
 </ul>
 <ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Scalable Sobolev IPM for Applications with Dynamic-Support Measures</font></a>  <br /> 
+Under review. <br /> 
+Viet-Hoang Tran, Thanh T. Chu, Thanh Tran, Duy-Tung Pham, Khang Tran, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Sobolev–Ricci Curvature</font></a>  <br /> 
+Under review. <br /> 
+Kyoichi Iwasaki, <b>Tam Le</b>, Hideitsu Hino.
+</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree Structure for the Categorical Wasserstein Weisfeiler-Lehman Graph Kernel</font></a>  <br /> 
 Under review. <br /> 
 Keishi Sando, <b>Tam Le</b>, Hideitsu Hino.
@@ -452,7 +466,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-02 17:49:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-06 21:39:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
