--- a/publication.html
+++ b/publication.html
@@ -28,7 +28,7 @@
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</font></a>  <br /> 
 <b><font style="color:rgb(34, 153, 84)">NeurIPS</font></b>, 2025. [Spotlight rate: 688/21575=<b>3.19%</b>] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu. <br />
-(<font style="color:rgb(23, 165, 137)">This paper was selected for spotlight presentation.</font> Spotlight : acceptance : submissions = 688 : 5290 : 21575)
+(<font style="color:rgb(138,43,226)">This paper was selected for spotlight presentation.</font> Spotlight : acceptance : submissions = 688 : 5290 : 21575)
 </p>
 </li>
 </ul>
@@ -176,7 +176,7 @@ Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Ma
 
 <b><font style="color:rgb(34, 153, 84)">AISTATS</font></b>, 2021. [Oral rate: 48/1527=<b>3.14%</b>] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font> <br />
-(<font style="color:rgb(23, 165, 137)">This paper was selected for oral presentation.</font> Oral : acceptance : submissions = 48 : 455 : 1527)
+(<font style="color:rgb(138,43,226)">This paper was selected for oral presentation.</font> Oral : acceptance : submissions = 48 : 455 : 1527)
 </p>
 </li>
 </ul>
@@ -466,7 +466,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-06 21:39:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-08 10:44:31 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
