--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </div></div>
 <h2>News</h2>
 <ul>
+<li><p>22-Oct-2025, Our paper, entitled <a href="to-be-updated" target=&ldquo;blank&rdquo;>&ldquo;Tree Structure for the Categorical Wasserstein Weisfeiler-Lehman Graph Kernel&rdquo;</a> has been accepted to <a href="https://jmlr.org/tmlr/" target=&ldquo;blank&rdquo;><b>TMLR</b></a> journal! This is joint work with Keishi Sando, and Hideitsu Hino.
+</p>
+</li>
 <li><p>19-Sep-2025, Our 2 papers have been accepted to <a href="https://neurips.cc/" target=&ldquo;blank&rdquo;><b>NeurIPS&rsquo;25</b></a>.
 </p>
 <ul>
@@ -142,7 +145,7 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-08 10:44:31 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-22 09:32:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
