--- a/publication.html
+++ b/publication.html
@@ -40,6 +40,13 @@ Viet-Hoang Tran, Thanh Tran, Thanh T. Chu, <b>Tam Le</b><font color="green">&oas
 </li>
 </ul>
 <ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree Structure for the Categorical Wasserstein Weisfeiler-Lehman Graph Kernel</font></a>  <br /> 
+<b><font style="color:rgb(23, 165, 137)">TMLR</font></b>, 2025. <br />
+Keishi Sando, <b>Tam Le</b>, Hideitsu Hino.
+</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://openreview.net/pdf?id=StaRAs9n49" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance: A Geometric Perspective</font></a>. [<a href="https://www.dropbox.com/scl/fi/bs7qa04znefzwopb4atqd/ICML2025_Poster_TSW-SL_TreeSystem.pdf?rlkey=b8hs29frkutd4kxphe36cboct&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br /> 
 
 
@@ -266,13 +273,6 @@ Kyoichi Iwasaki, <b>Tam Le</b>, Hideitsu Hino.
 </li>
 </ul>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree Structure for the Categorical Wasserstein Weisfeiler-Lehman Graph Kernel</font></a>  <br /> 
-Under review. <br /> 
-Keishi Sando, <b>Tam Le</b>, Hideitsu Hino.
-</p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://www.dropbox.com/scl/fi/dsforw4iizhwr8lw0v2vl/CVIU2025-Few-Shot-Object-Detection-via-Synthetic-Features-with-Optimal-Transport.pdf?rlkey=uo2ljzicldzg71w7nuv1b5l3r&amp;dl=0" target=&ldquo;blank&rdquo;><font color="blue">Few-Shot Object Detection via Synthetic Features with Optimal Transport</font></a> <br />
 
 <b>CVIU</b> Journal, 2025. <br />
@@ -466,7 +466,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-08 10:44:31 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-22 09:32:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
