--- a/code.html
+++ b/code.html
@@ -24,6 +24,43 @@
 <br />
 </p>
 <ul>
+<li><p><a href="https://github.com/lttam/PartialTSW" target=&ldquo;blank&rdquo;>Tree-Sliced Entropy Partial Transport (PartialTSW)</a>. (NeurIPS 2025)
+</p>
+<ul>
+<li><p>Tree-Sliced Entropy Partial Transport (PartialTSW), to our knowledge, is the <b>first</b> approach of TSW for unbalanced measures having <b>closed-form</b> expression for applications with dynamic-support measures. 
+</p>
+</li>
+<li><p>Note that, to our knowledge, there is <b></b>no<b></b> sliced-Wasserstein (SW) approach for unbalanced measures admitting closed-form expression.
+</p>
+</li>
+<li><p>Implemented by Thanh Tran.
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p><a href="https://github.com/lttam/OST_OrliczEPT" target=&ldquo;blank&rdquo;>Orlicz-Sobolev Transport (OST) and Orlicz-EPT for unbalanced graph-based measures</a>. (NeurIPS 2025)
+</p>
+<ul>
+<li><p>Efficient Orlicz-Sobolev approaches for transporting unbalanced measures on a graph.
+</p>
+</li>
+<li><p>Orlicz-EPT is an extension of Orlicz-Wasserstein (OW) for unbalanced measures.
+</p>
+</li>
+<li><p>Orlicz-Sobolev Transport (OST) is an extension of Generalized Sobolev Transport (GST) (ICML 2024) for unbalanced measures.
+</p>
+</li>
+<li><p>OST is a scalable variant of Orlicz-EPT (in the same sense as GST is a scalable variant of OW).
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
 <li><p><a href="https://github.com/lttam/NonlinearTSW" target=&ldquo;blank&rdquo;>Tree-Sliced-Wasserstein with Nonlinear Radon Transforms</a>. (ICML 2025)
 </p>
 <ul>
@@ -333,7 +370,7 @@
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-22 09:32:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-24 11:25:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
