--- a/code.html
+++ b/code.html
@@ -41,10 +41,10 @@
 </li>
 </ul>
 <ul>
-<li><p><a href="https://github.com/lttam/OST_OrliczEPT" target=&ldquo;blank&rdquo;>Orlicz-Sobolev Transport (OST) and Orlicz-EPT for unbalanced graph-based measures</a>. (NeurIPS 2025)
+<li><p><a href="https://github.com/lttam/OST_OrliczEPT" target=&ldquo;blank&rdquo;>Orlicz-Sobolev Transport (OST) and Orlicz-EPT</a>. (NeurIPS 2025)
 </p>
 <ul>
-<li><p>Efficient Orlicz-Sobolev approaches for transporting unbalanced measures on a graph.
+<li><p>Efficient Orlicz-Sobolev approaches, i.e., OST and Orlicz-EPT, for transporting unbalanced measures on a graph.
 </p>
 </li>
 <li><p>Orlicz-EPT is an extension of Orlicz-Wasserstein (OW) for unbalanced measures.
@@ -370,7 +370,7 @@
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-24 11:25:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-24 11:29:19 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
