--- a/code.html
+++ b/code.html
@@ -27,7 +27,7 @@
 <li><p><a href="https://github.com/lttam/PartialTSW" target=&ldquo;blank&rdquo;>Tree-Sliced Entropy Partial Transport (PartialTSW)</a>. (NeurIPS 2025)
 </p>
 <ul>
-<li><p>Tree-Sliced Entropy Partial Transport (PartialTSW), to our knowledge, is the <i>first</i> approach of TSW for unbalanced measures having <i>closed-form</i> expression for applications with dynamic-support measures. 
+<li><p>Tree-Sliced Entropy Partial Transport (PartialTSW), to our knowledge, is the <i>first</i> approach of TSW for unbalanced measures having <i>closed-form</i> expression for applications with dynamic-support measures (e.g., generative models)
 </p>
 </li>
 <li><p>Note that, to our knowledge, there is <i><b>no</b></i> sliced-Wasserstein (SW) approach for unbalanced measures admitting closed-form expression.
@@ -370,7 +370,7 @@
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-24 11:30:33 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-24 11:32:13 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
