--- a/publication.html
+++ b/publication.html
@@ -28,7 +28,7 @@
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</font></a>  <br /> 
 <b><font style="color:rgb(34, 153, 84)">NeurIPS</font></b>, 2025. [Spotlight rate: 688/21575=<b>3.19%</b>] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu. <br />
-(<font style="color:rgb(138,43,226)">This paper was selected for spotlight presentation.</font> Spotlight : acceptance : submissions = 688 : 5290 : 21575)
+(<font style="color:rgb(138,43,226)">This paper was selected for a spotlight presentation.</font> Spotlight : acceptance : submissions = 688 : 5290 : 21575)
 </p>
 </li>
 </ul>
@@ -172,7 +172,8 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 
 
 <b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2021. <br />
-Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Makoto Yamada, Michael A. Osborne.
+Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Makoto Yamada, Michael A. Osborne. <br />
+(<font style="color:rgb(138,43,226)">This paper was selected for a spotlight presentation.</font>)
 </p>
 </li>
 </ul>
@@ -466,7 +467,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-24 11:32:13 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-26 13:58:15 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
