--- a/publication.html
+++ b/publication.html
@@ -26,7 +26,7 @@
 <h2>Selected Journals / Conference Papers</h2>
 <ul>
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">An Efficient Orlicz-Sobolev Approach for Transporting Unbalanced Measures on a Graph</font></a>  <br /> 
-<b><font style="color:rgb(34, 153, 84)">NeurIPS</font></b>, 2025. [Spotlight rate: 688/21575=<b>&lt;font style=&ldquo;color:rgb(138,43,226)&rdquo;&gt;3.19%&lt;/font&gt;</b>] <br />
+<b><font style="color:rgb(34, 153, 84)">NeurIPS</font></b>, 2025. [Spotlight rate: 688/21575=<b><font style="color:rgb(138,43,226)">3.19%</font></b>] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu. <br />
 (<b><font style="color:rgb(138,43,226)">This paper was selected for a spotlight presentation.</font></b> Spotlight : acceptance : submissions = 688 : 5290 : 21575)
 </p>
@@ -181,7 +181,7 @@ Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Ma
 
 
 
-<b><font style="color:rgb(34, 153, 84)">AISTATS</font></b>, 2021. [Oral rate: 48/1527=<b>&lt;font style=&ldquo;color:rgb(209, 6, 54)&rdquo;&gt;3.14%&lt;/font&gt;</b>] <br />
+<b><font style="color:rgb(34, 153, 84)">AISTATS</font></b>, 2021. [Oral rate: 48/1527=<b><font style="color:rgb(209, 6, 54)">3.14%</font></b>] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font> <br />
 (<b><font style="color:rgb(209, 6, 54)">This paper was selected for an oral presentation.</font></b> Oral : acceptance : submissions = 48 : 455 : 1527)
 </p>
@@ -466,7 +466,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-27 17:36:50 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-27 17:38:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
