--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
 <a href="https://www.dropbox.com/scl/fi/md0ifgx26s07o43nsx3nr/TamLe2025Sep_CV.pdf?rlkey=z3nkupottxu2brymr7eni4zb5&amp;dl=0" target=&ldquo;blank&rdquo;>CV</a> - <a href="https://scholar.google.com/citations?user=ZyrRB_8AAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> - <a href="https://www.linkedin.com/in/lttam/" target=&ldquo;blank&rdquo;>LinkedIn</a> - <a href="https://github.com/lttam" target=&ldquo;blank&rdquo;>GitHub</a> - <a href="https://researchmap.jp/tamle" target=&ldquo;blank&rdquo;>Research Map</a> <br />
 </p>
 </td></tr></table>
-<h2>Research Interests: Machine Learning, Optimal Transport, Kernels <br /></h2>
-<p>My research aims to make AI more advanced, with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from <i>optimal transport (OT) theory</i> perspectives. More specifically, my research objectives are as follows:
+<h2>Research Interests: Machine Learning, Optimal Transport, Kernel Methods <br /></h2>
+<p>My research aims to make AI more advanced, with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from mathematical perspectives, especially <i>optimal transport (OT) theory</i>. More concretely, my research objectives are as follows:
 </p>
 <ol>
 <li><p>Deepening OT theory: 
 </p>
 <ol>
-<li><p>Breaking the curse of dimensionality for OT with projected 1D-structure, e.g., graph structure, tree system, tree structure.
+<li><p>Breaking the curse of dimensionality for OT with projected 1D-structure, e.g., exploiting graph structure, tree system, tree structure.
 </p>
 </li>
-<li><p>Going beyond Lp-structure for variational Wasserstein problems, e.g., functional geometric structure.
+<li><p>Going beyond Lp-structure for variational Wasserstein problems, e.g., leveraging functional geometric structure.
 </p>
 </li></ol>
 </li>
@@ -137,7 +137,9 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </p>
 </li>
 <li><p>Program committee: NeurIPS
-
+</p>
+</li>
+<li><p>Senior program committee: AAAI
 </p>
 </li>
 </ul>
@@ -145,7 +147,7 @@ Email: tam[<i>at</i>]ism.ac.jp (or lttam.vn[<i>at</i>]gmail.com) <br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-27 17:38:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-27 17:54:50 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
