--- a/publication.html
+++ b/publication.html
@@ -41,7 +41,8 @@ Viet-Hoang Tran, Thanh Tran, Thanh T. Chu, <b>Tam Le</b><font color="green">&oas
 </ul>
 <ul>
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree Structure for the Categorical Wasserstein Weisfeiler-Lehman Graph Kernel</font></a>  <br /> 
-<b><font style="color:rgb(23, 165, 137)">TMLR</font></b>, 2025. <br />
+
+<b><font style="color:rgb(137, 179, 75)">TMLR</font></b>, 2025. <br />
 Keishi Sando, <b>Tam Le</b>, Hideitsu Hino.
 </p>
 </li>
@@ -242,7 +243,8 @@ Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi. <b
 <li><p><a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</font></a> <br />
 
 
-<b>ML</b> Journal (<b><font style="color:rgb(23, 165, 137)">MLJ</font></b>), 2014. <br />
+
+<b><font style="color:rgb(137, 179, 75)">ML</font></b> Journal (<b><font style="color:rgb(137, 179, 75)">MLJ</font></b>), 2014. <br />
 <b>Tam Le</b>, Marco Cuturi. <br />
 (<i>Preliminary conference version in ACML, 2013</i>)
 </p>
@@ -259,7 +261,7 @@ Viet-Hoang Tran, Thanh T. Chu, Thanh Tran, Duy-Tung Pham, Khang Tran, <b>Tam Le<
 </li>
 </ul>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Scalable Sobolev IPM for Applications with Dynamic-Support Measures</font></a>  <br /> 
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Scalable Sobolev IPM for Dynamic-Support Measures and Its Applications</font></a>  <br /> 
 Under review. <br /> 
 Viet-Hoang Tran, Thanh T. Chu, Thanh Tran, Duy-Tung Pham, Khang Tran, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
@@ -466,7 +468,7 @@ Ph.D. thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-27 17:38:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-27 17:54:50 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
